--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ readme = "README.md"
 python = "^3.12"
 bs4 = "^0.0.2"
 requests = "^2.32.3"
+thrift = "^0.20.0"
+playwright = "^1.46.0"
+curl-cffi = "^0.7.1"
 
 
 [build-system]
