--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,10 @@ requests = "^2.32.3"
 thrift = "^0.20.0"
 playwright = "^1.46.0"
 curl-cffi = "^0.7.1"
+psutil = "^6.0.0"
+wmi = "^1.5.1"
+pycryptodomex = "^3.21.0"
+icecream = "^2.1.3"
 
 
 [build-system]
