--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,9 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = ">3.11"
-requests = "^2.32.3"
+requests = ">1.0.0"
 thrift = "^0.20.0"
-psutil = "^5.9.8"
+psutil = ">3.0.0"
 wmi = "^1.5.1"
 pycryptodomex = "^3.21.0"
 
