--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 description = ""
 authors = ["Valentin Alix <valentin-alix.850@outlook.fr>"]
 readme = "README.md"
+packages = [
+    { include = "ankama_launcher_emulator" }
+]
 
 [tool.poetry.dependencies]
 python = ">3.11"
