--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,9 @@ psutil = ">3.0.0"
 wmi = "^1.5.1"
 pycryptodomex = "^3.21.0"
 
+[tool.poetry.group.dev.dependencies]
+black = "^24.10.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
