--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,23 +1,23 @@
-[tool.poetry]
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[project]
 name = "ankama_launcher_emulator"
 version = "0.1.0"
 description = ""
-authors = ["Valentin Alix <valentin-alix.850@outlook.fr>"]
+authors = [{ name = "Valentin Alix", email = "valentin-alix.850@outlook.fr" }]
+requires-python = ">3.11"
 readme = "README.md"
+dependencies = [
+    "requests>1.0.0",
+    "thrift>=0.20.0,<0.21",
+    "psutil>3.0.0",
+    "wmi>=1.5.1,<2; sys_platform == 'win32'",
+    "pycryptodomex>=3.21.0,<4",
+    "frida>=16.6.5,<17",
+    "python-dateutil>=2.9.0.post0,<3",
+]
 
-[tool.poetry.dependencies]
-python = ">3.11"
-requests = ">1.0.0"
-thrift = "^0.20.0"
-psutil = ">3.0.0"
-wmi = "^1.5.1"
-pycryptodomex = "^3.21.0"
-frida = "^16.6.5"
-python-dateutil = "^2.9.0.post0"
-
-[tool.poetry.group.dev.dependencies]
-black = "^24.10.0"
-
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+[dependency-groups]
+dev = ["black>=24.10.0,<25"]
