--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "pycryptodomex>=3.21.0,<4",
     "frida>=16.6.5,<17",
     "python-dateutil>=2.9.0.post0,<3",
+    "mitmproxy>=12.2.1",
 ]
 
 [dependency-groups]
