--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,8 +21,7 @@ dependencies = [
     "pysocks>=1.7.1",
     "protobuf==5.28.3",
     "nicegui>=2.0.0",
-    "pyinstall>=0.1.4",
 ]
 
 [dependency-groups]
-dev = ["black>=24.10.0,<25"]
+dev = ["black>=24.10.0,<25", "pyinstall>=0.1.4"]
