remove old but now useless things

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "protobuf==5.28.3",
     "nicegui>=2.0.0",
     "frida-tools>=13.7.1",
+    "pyright>=1.1.408",
 ]
 
 [dependency-groups]
