better gui with pyqt

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,8 +20,8 @@ dependencies = [
     "mitmproxy>=12.2.1",
     "pysocks>=1.7.1",
     "protobuf==5.28.3",
-    "nicegui>=2.0.0",
     "pyinstaller>=6.19.0",
+    "pyqt6-fluent-widgets>=1.11.1",
 ]
 
 [dependency-groups]
