--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "protobuf==5.28.3",
     "pyinstaller>=6.19.0",
     "pyqt6-fluent-widgets>=1.11.1",
+    "netifaces>=0.11.0",
 ]
 
 [dependency-groups]
