finalize interface & readme

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,10 +20,22 @@ dependencies = [
     "mitmproxy>=12.2.1",
     "pysocks>=1.7.1",
     "protobuf==5.28.3",
-    "pyinstaller>=6.19.0",
     "pyqt6-fluent-widgets>=1.11.1",
-    "netifaces>=0.11.0",
+    "pyright>=1.1.408",
 ]
 
 [dependency-groups]
-dev = ["black>=24.10.0,<25","pyright>=1.1.408","frida-tools>=13.7.1"]
+dev = [
+    "black>=24.10.0,<25",
+    "frida-tools>=13.7.1",
+    "pyinstaller>=6.19.0",
+]
+
+[tool.pyright]
+exclude = [
+    "**/.venv",
+    "./ankama_launcher_emulator/gen_zaap",
+    "**/__pycache__",
+    "**/.*",
+    "**/node_modules"
+]
