--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "pyqt6-fluent-widgets>=1.11.1",
     "pyright>=1.1.408",
     "pyinstaller>=6.19.0",
+    "pydantic>=2.11.10",
 ]
 
 [dependency-groups]
